*SVN*

*0.0.1* (September 26th, 2007)

* Message#forward and Message#reply should create new instances of the current class, not always Message

* Add type field to MessageRecipient table

* Allow message senders to not be model recipients in third-party plugins

* Remove old references to Message::StateExtension

* Update with dependency on custom_callbacks

* Add documentation

* Convert dos newlines to unix newlines

* Move ReceiverMessage state into the MessageRecipient class

* Moved Build extensions out of the MessageRecipient class

* Fix determining whether classes exist in has_messages