@@ -39,6 +39,7 @@ spec = Gem::Specification.new do |s|
   s.has_rdoc        = true
   s.test_files      = Dir['test/**/*_test.rb']
   s.add_dependency  'has_states', '>= 0.0.1'
+  s.add_dependency  'has_finder', '>= 0.1.5'
   
   s.author          = 'Aaron Pfeifer, Neil Abraham'
   s.email           = 'info@pluginaweek.org'
