@@ -23,8 +23,8 @@ class MessageRecipientTest < Test::Unit::TestCase
     assert_invalid message_recipients(:bob_to_john), :state_id, nil
   end
   
-  def test_initial_state_should_be_unsent
-    assert_equal :unsent, MessageRecipient.new.initial_state.to_sym
+  def test_initial_state_should_be_unread
+    assert_equal :unread, MessageRecipient.new.initial_state.to_sym
   end
   
   def test_should_set_position_based_on_number_of_recipients_in_to
@@ -65,22 +65,6 @@ class MessageRecipientTest < Test::Unit::TestCase
     assert_equal users(:john), message_recipients(:bob_to_john).receiver
   end
   
-  def test_should_be_unsent_if_not_yet_sent
-    assert message_recipients(:unsent_bob_to_john).unsent?
-  end
-  
-  def test_should_deliver_if_unsent
-    assert message_recipients(:unsent_bob_to_john).deliver!
-  end
-  
-  def test_should_not_deliver_if_unread
-    assert !message_recipients(:bob_to_mary).deliver!
-  end
-  
-  def test_should_not_deliver_if_read
-    assert !message_recipients(:bob_to_john).deliver!
-  end
-  
   def test_should_not_view_if_unsent
     assert !message_recipients(:unsent_bob_to_john).view!
   end
@@ -93,11 +77,40 @@ class MessageRecipientTest < Test::Unit::TestCase
     assert !message_recipients(:bob_to_john).view!
   end
   
-  def test_should_delete_if_unread
-    assert message_recipients(:bob_to_mary).delete!
+  def test_should_be_active_if_not_yet_deleted
+    assert message_recipients(:bob_to_john).active?
   end
   
-  def test_should_delete_if_read
-    assert message_recipients(:bob_to_john).delete!
+  def test_should_not_be_active_if_deleted
+    m = message_recipients(:bob_to_john)
+    m.destroy
+    assert !m.active?
+  end
+  
+  def test_should_be_deleted_if_deleted
+    m = message_recipients(:bob_to_john)
+    m.destroy
+    assert m.deleted?
+  end
+  
+  def test_should_not_be_deleted_if_not_deleted
+    assert !message_recipients(:bob_to_john).deleted?
+  end
+  
+  def test_should_destroy_but_not_delete_if_message_and_sent_messages_still_exist
+    m = message_recipients(:bob_to_john)
+    assert m.destroy
+    m.reload
+    assert m.deleted_at?
+    assert MessageRecipient.exists?(m.id)
+  end
+  
+  def test_should_destroy_and_delete_if_sent_messages_destroyed
+    messages(:sent_from_bob).destroy
+    message_recipients(:bob_to_mary).destroy
+    
+    m = message_recipients(:bob_to_john)
+    m.destroy
+    assert !MessageRecipient.exists?(m.id)
   end
 end
